--- a/server/.env
+++ b/server/.env
@@ -15,3 +15,12 @@ DB_LOGGING=false
 DB_SSL=true
 
 PORT=3000
+
+#Zalopay
+ZALOPAY_APP_ID=2553
+ZALOPAY_KEY1=PcY4iZIKFCIdgZvA6ueMcMHHUbRLYjPL
+ZALOPAY_KEY2=kLtgPl8HHhfvMuDHPwKfgfsY4Ydm9eIz
+
+#Server_url
+SERVER_URL= https://5db82a61bac5.ngrok-free.app
+REDIRECTURL= https://6bc157c3e631.ngrok-free.app
