--- a/server/package.json
+++ b/server/package.json
@@ -8,9 +8,12 @@
     "dev": "nodemon ./src/app.js"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "moment": "^2.30.1",
     "mysql2": "^3.15.3",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
