--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "react-hook-form": "^7.68.0",
     "react-router-dom": "^7.9.6",
     "recharts": "2.15.4",
+    "socket.io-client": "^4.8.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
@@ -47,6 +48,7 @@
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
+    "@types/socket.io-client": "^3.0.0",
     "@vitejs/plugin-react-swc": "^4.2.2",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
