--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
     "mysql2": "^3.15.3",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "socket.io": "^4.8.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.11",
